tests/specs/run/css_imports/missing_unstable/main.ts
import sheet from "./style.css" with { type: "css" };

console.log(sheet);
